--- a/style.css
+++ b/style.css
@@ -19,6 +19,12 @@ p {
     color: rgb(85,85,85);
 }
 
+.arrow {
+    position: absolute;
+    right: -5rem;
+    bottom: 2.5rem;
+}
+
 /* transitionP */
 
 a, .btn {
@@ -234,6 +240,7 @@ section {
 }
 
 .btn {
+    font-family:'Poppins', sans-serif;
     font-weight: 600;
     transition: all 300ms ease;
     padding: 1rem;
@@ -295,11 +302,6 @@ section {
     border-radius: 2rem;
 }
 
-.arrow {
-    position: absolute;
-    right: -5rem;
-    bottom: 2.5rem;
-}
 
 .details-container {
     padding: 1.5rem;
@@ -354,7 +356,7 @@ section {
 article {
     display: flex;
     width: 10rem;
-    justify-content: space-around;
+    /* justify-content: space-around; */
     gap: 0.5rem;
 }
 
